# openai_assistant_toolkit

./: .gitignore  README.md  pyproject.toml
src/openai_assistant_toolkit/: __init__.py  assistant_manager.py  conversation_manager.py  main.py
tests/: test_toolkit.py
tests/testdata/: openapi_spec.json
